Bug 513268 - When using accessibility feature "Bounce keys", the key repeat stops working in Brave browser only.
Summary: When using accessibility feature "Bounce keys", the key repeat stops working ...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.5.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: accessibility
: 516820 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-12-12 21:47 UTC by Barafu Albino Cheetah
Modified: 2026-03-19 22:35 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Barafu Albino Cheetah 2025-12-12 21:47:57 UTC
SUMMARY
When I enable the "Bounce Keys" accessibility feature, the keys stop repeating in Brave browser. When I press and hold any key in browser, only 1 instance is typed. At the same time, in all other applications the repeating works as intended. I tried Firefox, Steam, GTK apps - it works everywhere else. Disabling "Bounce Keys" immediately restores the repeating in Brave.


STEPS TO REPRODUCE
1. Turn on Accessibility - Keyboard filter - Bounce keys, apply
2. Open Brave, put cursor in address bar, 
3. hold any letter

OBSERVED RESULT
Only 1 letter  is typed

EXPECTED RESULT
A letters to be typed indefinitely according  to the repeat settings of the keyboard. 

SOFTWARE/OS VERSIONS

Operating System: Arch Linux 
KDE Plasma Version: 6.5.4
KDE Frameworks Version: 6.20.0
Qt Version: 6.10.1
Kernel Version: 6.17.9-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 32 × AMD Ryzen 9 3950X 16-Core Processor
Memory: 64 GB of RAM (62.7 GB usable)
Graphics Processor: NVIDIA GeForce RTX 4090


ADDITIONAL INFORMATION
Comment 1 Barafu Albino Cheetah 2025-12-12 21:55:41 UTC
Some more testing:
Brave in Flatpak IS affected. 
Chromium in Flatpak IS affected. 
Spotify in Flatpak IS NOT affected. (Spotify app is just a web page runing in Chromium, it even creates Chromium's user data folders)
Comment 2 Bug Janitor Service 2026-03-03 00:22:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8916
Comment 3 Zamundaaa 2026-03-04 16:39:43 UTC
*** Bug 516820 has been marked as a duplicate of this bug. ***