plugins/bouncekeys: Let key repeat events through the filter

If Bounce Keys lets a press event through the filter, then
we should be letting that key's repeat events through.

If we reject a press event for being too quick, then we
should be rejecting that key's repeat events.

Previously, Bounce Keys was rejecting key repeat events
as if they were initial key presses.

BUG: 513268
Signed-off-by: Ritchie Frodomar <alkalinethunder@gmail.com>